Updated Samples About for fenxlib 3.0.0-alpha.6