@@ -1,18 +1,19 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.11'
 }
 
 ext {
     //legyver dependencies
-    legyverFenxlibVersion = '2.1.0.0'
+    legyverFenxlibVersion = '3.0.0-alpha.6'
     //apache dependencies
     commonsLogVersion = '2.13.3'
     commonsLangVersion = '3.11'
 }
 
 group 'com.legyver'
-version '1.0-SNAPSHOT'
+version '3.0.0-alpha.6'
 
 repositories {
     mavenLocal()
@@ -20,6 +21,9 @@ repositories {
 }
 
 dependencies {
+    //json config
+    implementation group: 'com.legyver', name: 'fenxlib.config.json', version: legyverFenxlibVersion
+
     //about
     implementation group: 'com.legyver', name: 'fenxlib.widgets.about', version: legyverFenxlibVersion
 
@@ -33,13 +37,7 @@ application {
     mainClass = 'com.legyver.fenxlib.samples.about.MyApplication'
 }
 
-run {
-    //workaround for https://github.com/sshahine/JFoenix/issues/955
-    jvmArgs = [
-            '--add-opens=java.base/java.lang.reflect=com.jfoenix'
-    ]
-}
-
-java {
-    modularity.inferModulePath = true
+javafx {
+    version = '17.0.2'
+    modules = ['javafx.controls', 'javafx.media', 'javafx.swing', 'javafx.web']
 }
